Bug: 552366 Reviewer: Peter Comment: Give error message for file entry on mobile

--- a/trunk/ssf/web/docroot/css/ss_mobile_iphone.css
+++ b/trunk/ssf/web/docroot/css/ss_mobile_iphone.css
@@ -28,7 +28,7 @@ span.pad-left20 {
 	}	
 
 .font-red {
-	font-color: red;
+	color: red;
 	}
 
 /* colors 
